# jyggalag

./: .gitignore  Changelog.md  Readme.md  flake.nix  jyggalag-example.toml  jyggalag.cabal  jyggalag.toml  makefile  poppen.cabal  poppen.toml
app/: Main.hs
src/: Jyggalag.hs  Poppen.hs
src/Jyggalag/: Copy.hs  Git.hs  Hackage.hs  Toml.hs
src/Poppen/: Copy.hs  Git.hs  Toml.hs
test/: Test.hs
