cabal-version:      3.0

name:           jyggalag
version:        1.0.0
homepage:       https://github.com/jappeace/jyggalag#readme
bug-reports:    https://github.com/jappeace/jyggalag/issues
author:         Jappie Klooster
maintainer:     jappieklooster@hotmail.com
copyright:      2023 Jappie Klooster
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    Readme.md
    LICENSE
    Changelog.md
    jyggalag-example.toml

source-repository head
  type: git
  location: https://github.com/jappeace/jyggalag

common common-options
  default-extensions: 
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      InstanceSigs
      MultiParamTypeClasses
      LambdaCase
      MultiWayIf
      NamedFieldPuns
      TupleSections
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveLift
      DeriveTraversable
      DerivingStrategies
      GeneralizedNewtypeDeriving
      StandaloneDeriving
      OverloadedStrings
      TypeApplications
      NumericUnderscores

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Widentities -Wredundant-constraints
    -Wcpp-undef -fwarn-tabs -Wpartial-fields
    -fdefer-diagnostics -Wunused-packages
    -fenable-th-splice-warnings

  build-depends:
      base >=4.9.1.0 && <4.19.0.0,
      optparse-applicative,
      toml-parser,
      mtl,
      containers,
      directory,
      filepath,
      typed-process,
      text,
      bytestring,
      time,
      unliftio

  default-language: Haskell2010

library
  import: common-options
  exposed-modules:
      Jyggalag
      Jyggalag.Copy
      Jyggalag.Toml
      Jyggalag.Git
      Jyggalag.Hackage
  other-modules:
      Paths_jyggalag
  hs-source-dirs:
      src

executable exe
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      jyggalag
  ghc-options: -Wno-unused-packages

test-suite unit
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wno-unused-packages
  other-modules:
      Paths_jyggalag
  hs-source-dirs:
      test
  build-depends:
      tasty,
      tasty-hunit,
      tasty-quickcheck,
      jyggalag
